--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
+    "redux-thunk": "^2.2.0",
     "request": "^2.74.0",
     "sequelize": "^3.24.1",
     "serve-favicon": "^2.2.0",
